--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,38 @@
-/*
-Colors:
 
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
 
-*/
+.navbar {
+    display: flex;
+    overflow: hidden;
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    width: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    align-content: center;
+    flex-direction: row;
+    top:0;
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: #000000;
+    padding: 14px 16px;
+    text-decoration: none;
+    padding-left: 200px;
+   
+}
+
+.spotifylogo {
+    width: 100px;
+}
+
+
+
+.backgroundimg{
+
+  background-image: url("/images/landing.jpg"); 
+  width: 100%; 
+  height: 1200px;
+  background-size: cover;
+}
