--- a/styles/style.css
+++ b/styles/style.css
@@ -1,38 +1,116 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
 
-
-.navbar {
-    display: flex;
-    overflow: hidden;
-    background-color: rgb(255, 255, 255);
-    position: fixed;
-    width: 100%;
-    align-items: center;
-    justify-content: flex-start;
-    align-content: center;
-    flex-direction: row;
-    top:0;
+.safsda {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(238, 137, 4);
 }
 
-.navbar a {
-    float: left;
-    display: block;
-    color: #000000;
-    padding: 14px 16px;
-    text-decoration: none;
-    padding-left: 200px;
-   
+li,
+a {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: black;
+  text-decoration: none;
 }
 
-.spotifylogo {
-    width: 100px;
+.sticky {
+  position: fixed;
+  background-color: white;
+  display: flex;
+  padding: 1rem 1rem;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
 }
 
+.nav_links {
+  list-style: none;
+}
 
+.nav_links li {
+  display: inline-block;
+}
 
-.backgroundimg{
+.nav_links li a {
+  transition: all 0.3 ease 0s;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  font-weight: 800;
+  margin-right: 80px;
+}
 
-  background-image: url("/images/landing.jpg"); 
-  width: 100%; 
-  height: 1200px;
+.nav_links li a:hover {
+  color: darkgreen;
+}
+
+.logo {
+  cursor: pointer;
+  margin-left: 28px;
+}
+
+.coverpage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url(/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/landing.jpg);
+  height: 900px;
+  width: 100%;
+  color: white;
   background-size: cover;
+  background-position: center;
+}
+
+.coverpage h1 {
+  font-size: 120px;
+}
+
+.coverpage h2 {
+  font-family: sans-serif;
+  width: 700px;
+  text-align: center;
+}
+
+
+#whatson h1{
+    text-align: center;
+}
+
+#whatson hr{
+    border: 1px solid rgb(6, 252, 6);
+    width: 210px;
+    
+}
+
+#whatson h3{
+    width: 206px;
+    color: rgb(14, 112, 71);
+    font-size: x-large;
+}
+
+#whatson p{
+    width: 181px;
+    text-align: center;
+    font-weight: 500;
+    
+}
+
+.rectangle{
+
+    display: flex;
+    justify-content: center;
+    
+}
+
+.squares {
+    text-align: center;
+    padding: 100px 200px;
+}
+ .squares img{
+    width: 100px;
+    
 }
